--- a/index.yaml
+++ b/index.yaml
@@ -1,11 +1,49 @@
 id: github.com/cloud-native-toolkit/terraform-ocp-buildah-unprivileged
-name: ""
+name: ocp-buildah-unprivileged
 type: terraform
-description: ""
+description: Module to configure a Red Hat OpenShift cluster to allow buildah to run unprivileged. (This is primarily necessary for IBM ROKS clusters.)
 tags:
-  - tools
-  - devops
+  - buildah
+  - userspace
+  - unprivileged
+  - ROKS
 versions:
+  - platforms:
+      - ocp4
+    dependencies:
+      - id: cluster
+        refs:
+          - source: github.com/ibm-garage-cloud/terraform-ibm-container-platform
+            version: ">= 1.7.0"
+          - source: github.com/ibm-garage-cloud/terraform-ibm-ocp-vpc
+            version: ">= 1.0.0"
+          - source: github.com/ibm-garage-cloud/terraform-k8s-ocp-cluster
+            version: ">= 2.0.0"
+      - id: namespace
+        refs:
+          - source: github.com/ibm-garage-cloud/terraform-k8s-namespace
+            version: ">= 2.1.0"
+    variables:
+      - name: cluster_config_file
+        moduleRef:
+          id: cluster
+          output: config_file_path
+        type: string
+        description: Cluster config file for Kubernetes cluster.
+      - name: namespace
+        moduleRef:
+          id: namespace
+          output: name
+        type: string
+        description: |-
+          variable "namespace" {
+            type        = string
+            description = "A description of my
+      - name: variable"~  default     = "default"~}~~
+        type: string
+        default: default
+        optional: true
+    version: v1.0.0
   - platforms:
       - kubernetes
       - ocp3
@@ -27,28 +65,3 @@ versions:
     #          version: ">= 1.6.0"
     variables: []
     version: v0.0.0
-#    - name: cluster_type
-#      moduleRef:
-#        id: cluster
-#        output: type_code
-#    - name: cluster_ingress_hostname
-#      moduleRef:
-#        id: cluster
-#        output: ingress_hostname
-#    - name: cluster_config_file
-#      moduleRef:
-#        id: cluster
-#        output: config_file_path
-#    - name: tls_secret_name
-#      moduleRef:
-#        id: cluster
-#        output: tls_secret_name
-#    - name: releases_namespace
-#      moduleRef:
-#        id: namespace
-#        output: name
-#        discriminator: tools
-#    - name: icon_url
-#      moduleRef:
-#        id: dashboard
-#        output: base_icon_url
